working on menu popping up with correct info

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
 <script src="/assets/vendor/jquery/dist/jquery.min.js"></script>
 <script src="/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/assets/vendor/Keypress/keypress-2.1.3.min.js"></script>
-<script src="/assets/vendor/angular/angular.min.js"></script>
+<script src="/assets/vendor/angular/angular.js"></script>
 <script src="/assets/vendor/angular-touch/angular-touch.min.js"></script>
 <script src="/assets/vendor/angular-sanitize/angular-sanitize.min.js"></script>
 <script src="/assets/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
